--- a/lab1and2/Lab 1 - Problem 3.ipynb
+++ b/lab1and2/Lab 1 - Problem 3.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test1 passed\n",
+      "Test2 passed\n"
+     ]
+    }
+   ],
    "source": [
     "def eps_greedy(q_vals, eps, state):\n",
     "    \"\"\"\n",
@@ -188,6 +197,11 @@
     "    #   number of actions can be read off from len(q_vals[state])\n",
     "    import random\n",
     "    # YOUR CODE HERE\n",
+    "    if random.random() <= eps:\n",
+    "        action = np.random.randint(4)\n",
+    "    else:\n",
+    "        action = np.argmax(q_vals[state])\n",
+    "    return action\n",
     "\n",
     "# test 1\n",
     "dummy_q = defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))\n",
@@ -236,11 +250,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed\n"
+     ]
+    }
+   ],
    "source": [
     "def q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward):\n",
     "    \"\"\"\n",
@@ -256,6 +276,8 @@
     "    Performs in-place update of q_vals table to implement one step of Q-learning\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
+    "    target = reward + gamma * np.max(q_vals[next_state])\n",
+    "    q_vals[cur_state][action] = (1 - alpha) * q_vals[cur_state][action] + alpha * target\n",
     "\n",
     "# testing your q_learning_update implementation\n",
     "dummy_q = q_vals.copy()\n",
@@ -273,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -281,11 +303,11 @@
      "output_type": "stream",
      "text": [
       "Itr 0 # Average speed: 0.05\n",
-      "Itr 50000 # Average speed: 0.05\n",
-      "Itr 100000 # Average speed: 0.05\n",
-      "Itr 150000 # Average speed: 0.05\n",
-      "Itr 200000 # Average speed: 0.05\n",
-      "Itr 250000 # Average speed: 0.05\n"
+      "Itr 50000 # Average speed: 2.03\n",
+      "Itr 100000 # Average speed: 3.37\n",
+      "Itr 150000 # Average speed: 3.37\n",
+      "Itr 200000 # Average speed: 3.37\n",
+      "Itr 250000 # Average speed: 3.37\n"
      ]
     }
    ],
@@ -316,7 +338,15 @@
     "for itr in range(300000):\n",
     "    # YOUR CODE HERE\n",
     "    # Hint: use eps_greedy & q_learning_update\n",
-    "    \n",
+    "    action = eps_greedy(q_vals, eps, cur_state)\n",
+    "    next_state, reward, done, info = env.step(action)\n",
+    "    if not done:\n",
+    "        q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward)\n",
+    "        cur_state = next_state\n",
+    "    else:\n",
+    "        # important to update q values for the terminal state!!!\n",
+    "        q_vals[cur_state][action] = reward\n",
+    "        cur_state = env.reset()\n",
     "    if itr % 50000 == 0: # evaluation\n",
     "        print(\"Itr %i # Average speed: %.2f\" % (itr, greedy_eval()))\n",
     "\n",
@@ -332,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -360,6 +390,15 @@
     "# you can close the visualization GUI with the following method \n",
     "env.close_gui()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
